# pkg/handler/auth.go
@@ -10,14 +10,12 @@ import (
 // @Summary SignUp
 // @Tags auth
 // @Description create account
-// @ID create-account
-// @Accept json
-// @Produce json
+// @Accept  json
+// @Produce  json
 // @Param input body todo.User true "account info"
-// @Succes 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponce
-// @Failure 500 {object} errorResponce
-// @Failure default {object} errorResponce
+// @Success 200 {integer} integer 1
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
 // @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var input todo.User
@@ -43,6 +41,16 @@ type signInInput struct {
 	Password string `json:"password" binding:"required"`
 }
 
+// @Summary SignIn
+// @Tags auth
+// @Description login
+// @Accept  json
+// @Produce  json
+// @Param input body signInInput true "credentials"
+// @Success 200 {string} string "token"
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var input signInInput
 
