# pkg/handler/response.go
@@ -5,14 +5,14 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-type errorResponce struct {
+type errorResponse struct {
 	Massage string `json:"massage"`
 }
-type statusResponce struct {
+type statusResponse struct {
 	Status string `json:"status"`
 }
 
 func newErrorResponse(c *gin.Context, statusCode int, massage string) {
 	logrus.Error(massage)
-	c.AbortWithStatusJSON(statusCode, errorResponce{Massage: massage})
+	c.AbortWithStatusJSON(statusCode, errorResponse{Massage: massage})
 }
